
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "akhdefo_functions"
version = "2.2.66"
authors = [
  { name="Mahmud Mustafa Muhammad", email="mahmud.muhamm1@gmail.com" },
]
description = "Land Deformation Monitoring Using Optical Satellite Imagery"
readme = "./README_pypi.md"
requires-python = ">=3.7"

classifiers = [
    'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: Academic Free License (AFL)',  
        'Operating System :: Microsoft :: Windows :: Windows 10',
        'Operating System :: POSIX :: Linux',        
        'Programming Language :: Python :: 3',  'Programming Language :: Python :: 3.6',  
        'Programming Language :: Python :: 3.7', "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]

[project.urls]
"GitHub-Page" = "https://github.com/mahmudsfu/AkhDefo"
"Bug Tracker" = "https://github.com/mahmudsfu/AkhDefo/issues"
"ReadMe" = "https://akhdefo.readthedocs.io/en/latest/README.html"
"Documentation-Homepage" = "https://akhdefo.readthedocs.io/en/latest/"




